--- a/_posts/2012-04-12-git-tfs_fr.textile
+++ b/_posts/2012-04-12-git-tfs_fr.textile
@@ -6,17 +6,19 @@ categories: .Net
 tags:
 - Git
 - TFS
-published: true
+published: false
 ---
 _(ou comment utiliser Git en environnement hostile!)_
 
 h3. 1. Cloner la branche principale du dépôt tfs
 
 * En récupérant l'historique complet du dépot (long mais conseillé...)
-@git tfs clone http://monServeurTfs:8080/tfs/DepotTfs $/MonProjet/NomDuTronc .@
+
+bc. git tfs clone http://monServeurTfs:8080/tfs/DepotTfs $/MonProjet/NomDuTronc .
 
 * En ne récupérerant que le dernier commit du dépot
-@git tfs quick-clone http://monServeurTfs:8080/tfs/DepotTfs $/MonProjet/NomDuTronc .@
+
+bc. git tfs quick-clone http://monServeurTfs:8080/tfs/DepotTfs $/MonProjet/NomDuTronc .
 
 A l'ouverture de la solution Visual Studio => choix de la déconnexion temporaire (sinon il modifie plein de fichier)
 
@@ -24,22 +26,25 @@ h3. 2. Synchronisation avec le dépot tfs
 
 h4. 2.1. Récupération des commits du tronc
 
-@git tfs fetch@
+bc. git tfs fetch
 
 h4. 2.2. Commiter sur le dépot tfs
 
 h5. 2.2.1 Commiter manuellement
-@git tfs ct@
+
+bc. git tfs ct
 
 ! Toujours faire une fetch & rebase (ou merge) avant de commiter (sinon risque d'écrasement de fichier communs modifiés)
 
 h5. 2.2.2 Commiter automatiquement les commits Git locaux
-@git tfs rcheckin@
+
+bc. git tfs rcheckin
 
 Note : Lors de l'utilisation de rcheckin, il est possible lors d'un commit Git local, d'ajouter des références aux éléments de travail pour les associer ou les clore ( lors du commit sur le serveur TFS).
 Voici la syntaxe :
-@git-tfs-work-item: <id> associate@ 
-@git-tfs-work-item: <id> resolve@
+
+bc. git-tfs-work-item: <id> associate
+git-tfs-work-item: <id> resolve
 
 h3. 3. Gestion d'une branche
 
@@ -50,6 +55,7 @@ Toutefois, ce n'est pas impossible...
 
 Pour cela :
 	1. Modifiez le fichier "config" dans le répertoire ".git" pour ajouter les lignes (Attention! : pas de '.' dans le nom de la branche distante) :
+
 bc.
 [tfs-remote "maBrancheTfs"]
 url = http://myTfsServer:8080/tfs/DepotTfs
@@ -58,29 +64,29 @@ fetch = refs/remotes/tfs/maBrancheTfs
 
 	2. Trouvez le numéro de premier commit tfs de la branche
     Ce numéro est disponible, soit dans les propriétés de la branche depuis le "Team Explorer" soit en utilisant la ligne de commande :
-	@tf branches $/MonProjet/NomDeLaBranche@
+	@tf branches $/MonProjet/NomDeLaBranche
 
 	3. Trouvez dans l'historique de git le sha1 du commit parent à celui trouvé précédement.
 	Dans l'historique de git, chercher le sha1, non pas du commit trouvé à l'étape suivante mais de son parent (n° du commit précédent -1). C'est à dire le dernier commit commun au tronc et à la branche!
 
 	4. Extraire ce commit en créant une branche locale par la commande :
-	@git checkout -b maBrancheTfs [SHA1_TROUVE_PRECEDEMENT]@
+	@git checkout -b maBrancheTfs [SHA1_TROUVE_PRECEDEMENT]
 	"maBrancheTfs" est le nom de la branche git locale correspondant à la branche sur tfs
 
 	5. Créer manuellement la référence sur la branche locale (autrement notre future branche ne sera pas connectée au tonc :( )
     "maBrancheTfs" est le nom de la branche distante tfs définie à l'étape 1.
-    @git rev-parse maBrancheTfs >> ./.git/refs/remotes/tfs/maBrancheTfs@
+    @git rev-parse maBrancheTfs >> ./.git/refs/remotes/tfs/maBrancheTfs
 
 	6. Récupérer l'historique des commits de la branche tfs!!! Commande à effectuer chaque fois qu'on voudra resynchroniser la branche avec le serveur...
-    @git tfs fetch -i maBrancheTfs@
+    @git tfs fetch -i maBrancheTfs
 
 h4. 3.2. Récupération des commits d'une branche
 
-@git tfs fetch -i maBrancheTfs@
+bc. git tfs fetch -i maBrancheTfs
 
 h4. 3.3. Commiter sur une branche
 
-@git tfs ct -i maBrancheTfs@
+bc. git tfs ct -i maBrancheTfs
 
 h4. 4. Sources
 
