--- a/_posts/2012-10-07-Cours-GitTfs.textile
+++ b/_posts/2012-10-07-Cours-GitTfs.textile
@@ -77,7 +77,7 @@ Git est :
 * stocké sous la forme d'un graphe acyclique d'objets
 * accessible avec des références
 
-!http://git-scm.com/figures/18333fig0315-tn.png(Exemple de graphe acyclique --hitorique du dépot--)!
+!=http://git-scm.com/figures/18333fig0315-tn.png(Exemple de graphe acyclique --hitorique du dépot--)!
 
 Toute manipulation de Git ne fait que manipuler ce graphe... (Ne jamais l'oublier et essayer de visualiser cela!!)
 ...en ne faisant qu'ajouter des commits!
@@ -86,7 +86,7 @@ h2. 4.Présentation de GitExtension
 
 ... (démo)
 
-!http://gitextensions.googlecode.com/files/commitlog205.png!
+!={width: 509px; height: 334px;}http://gitextensions.googlecode.com/files/commitlog205.png!
 
 h2. 5.Utilisation de Git-TFS:
 
@@ -318,4 +318,5 @@ PS :
 * "Documentation":http://sixrevisions.com/resources/git-tutorials-beginners/
 
 ==<!--Introduction à Git par David Gageot : Git, la gestion de configuration qui vous veut du bien -->==
-==<!--Code freeze, merges douloureux, installation et administration d'un serveur, sauvegardes fastidieuses, perte de données, branches coûteuses, obstacle au refactoring, cycles de build trop longs… Ces mots sont-ils pour vous synonymes de Gestion de Configuration ? Vous avez appris à vivre en couple avec un outil en ignorant volontairement ses défauts, mais ils se rappellent régulièrement à vous ? Découvrez à travers des cas d'utilisation quotidiens comment Git sait se faire oublier et vous faire gagner beaucoup de temps. Vous allez aimer cet outil avec une administration proche de zéro, ne nécessitant pas de backup, utilisable en moins de cinq minutes sur une clef usb, un simple disque partagé, en serveur ou en mode SAAS. Les équipes agiles, seront « accros » de l'outil sachant se faire oublier lors de refactoring de code massifs et permettant l'intégration continue sans serveur. Les équipes distribuées apprécieront les branches locales, le cherry-picking et les performances de git. Vous êtes build manager en charge des branches et des code freezes ? Désolé, vous venez de perdre votre job.-->==
+==<!--Code freeze, merges douloureux, installation et administration d'un serveur, sauvegardes fastidieuses, perte de données, branches coûteuses, obstacle au refactoring, cycles de build trop longs… Ces mots sont-ils pour vous synonymes de Gestion de Configuration ? Vous avez appris à vivre en couple avec un outil en ignorant volontairement ses défauts, mais ils se rappellent régulièrement à vous ? Découvrez à travers des cas d'utilisation quotidiens comment Git sait se faire oublier et vous faire gagner beaucoup de temps. Vous allez aimer cet outil avec une administration proche de zéro, ne nécessitant pas de backup, utilisable en moins de cinq minutes sur une clef usb, un simple disque partagé, en serveur ou en mode SAAS. Les équipes agiles, seront « accros » de l'outil sachant se faire oublier lors de refactoring de code massifs et permettant l'intégration continue sans serveur. Les équipes distribuées apprécieront les branches locales, le cherry-picking et les performances de git. Vous êtes build 
+manager en charge des branches et des code freezes ? Désolé, vous venez de perdre votre job.-->==
